Stop piling up update alerts windows
git-svn-id: http://svn.vuze.com/public/client@39794 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2